# lensisku

./: .cursorignore  .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README-WebRTC-WebSocket-Dev.md  README-WebRTC-WebSocket.md  README.md  coturn-dev.conf  coturn.conf  deploy-webrtc-dev.sh  deploy-webrtc.sh  docker-compose.dev.yml  docker-compose.webrtc-dev.yml  docker-compose.webrtc.yml  docker-compose.yml  nginx.conf  test-flex.html  watch.sh
.cargo/: config.toml
.cursor/rules/: Rust-backend.mdc  Vue-js-Nuxt-frontend.mdc  pnpm.mdc
.github/workflows/: vue.yml
building/: Dockerfile.npm  Dockerfile.rust  build-npm-inside.sh  build-npm.sh  build-rust-inside.sh
docs/: DELIVERY-SUMMARY.md  README-translation-feature.md  anonymous_progress_sync.md  guaspi_import_plan.md  security-report.md  translation-feature-quick-reference.md  translation-feature-summary.md  translation-implementation-guide.md  translation-linking-feature-analysis.md  translation-workflow-comparison.md
dump/: jbocma.sql
frontend/: .eslintrc.cjs  .prettierignore  .prettierrc.json  eslint.config.js  index.html  knip.json  package.json  pnpm-lock.yaml  tailwind.aqua-buttons.mjs  tailwind.config.js  tailwind.flat-buttons.mjs  tsconfig.app.json  vite.config.js  vite.config.ts
frontend/docs/: brandbook.md
frontend/public/: robots.txt
frontend/scripts/: check-i18n-keys.mjs
frontend/src/: App.vue  api.js  api.ts  i18n.ts  main.ts  shims-js.d.ts  style.css  vite-env.d.ts
frontend/src/components/: AddAllToCollectionWidget.vue  AlertComponent.vue  AnimatedDots.vue  AnonymousProgressBanner.vue  AssistantThoughtStep.vue  AudioPlayer.vue  ClipboardButton.vue  (+53 more)
locales/: en.json  ja.json  jbo.json  zh.json
migrations/: V112__sanitize_existing_content.sql  V113__add_fast_search_indexes.sql  V114__denormalize_search_fields.sql  V115__cache_valsi_fields_and_optimize_indexes.sql  V116__cache_glosswords_for_fast_search.sql  V117__fix_sync_definition_cache_fields_reference.sql  V123__invalidate_embeddings_for_raw_text.sql  V124__user_notifications_definition_id.sql  V125__drop_ambiguous_notify_function.sql  V126__create_definition_links.sql  V127__add_definition_link_id_to_threads.sql  V128__update_convenient_comments_view.sql  V129__allow_empty_natlangwords_meaning.sql  V129__update_embedding_to_768.sql  V130__defer_natlangword_cleanup_during_keyword_insert.sql  V131__valsi_officialdata_gismu_cmavo_type.sql  V132__drop_comment_likes.sql  V133__fix_check_level_prerequisites.sql  V134__collection_item_sounds.sql  V135__valsi_sounds.sql  V136__add_ithkuil_language.sql  V137__add_quiz_image_directions.sql  V138__valsi_trigger_include_typeid_source_langid.sql  V139__cached_lujvo_decomposition.sql  V140__assistant_chats.sql  V141__add_jbotcan_import_metadata.sql  V142__rename_jbotcan_import_usernames.sql  V143__collection_images.sql  V144__collection_images_shared_blob.sql  V145__add_collection_id_to_threads.sql  V146__create_wiki_articles.sql  V147__private_messaging_system.sql
scripts/: assistant_system_instructions_static.txt  build_assistant_core_dictionary.py  import_guaspi.py  import_valsi_sounds.py  shishkin-backgrounds-sources.json
scripts/files/: guaspi.tsv
src/: auth_utils.rs  config.rs  embeddings.rs  error.rs  main.rs  openapi.rs  server.rs  tersmu.rs
src/assistant/: assistant_system_prompt.txt  chat_store.rs  context_compress.rs  controller.rs  core_reference_dictionary.txt  dto.rs  mod.rs  persist.rs  service.rs  sse_ui_sync.rs  stored_messages.rs
src/auth/: controller.rs  error.rs  models.rs  permissions.rs  service.rs
src/background/: mod.rs  service.rs  valsi_tts.rs
src/collections/: controller.rs  dto.rs  mod.rs  models.rs  service.rs
src/comments/: controller.rs  dto.rs  mod.rs  models.rs  service.rs
src/export/: controller.rs  models.rs  service.rs
src/flashcards/: controller.rs  dto.rs  mod.rs  models.rs  service.rs
src/grammar/: lojban.peg
src/jbovlaste/: broadcast.rs  controller.rs  dto.rs  mod.rs  models.rs  service.rs
src/language/: controller.rs  mod.rs  models.rs  service.rs
src/mailarchive/: controller.rs  dto.rs  mod.rs  models.rs  service.rs
src/messaging/: controller.rs  dto.rs  encryption.rs  mod.rs  models.rs  service.rs  webrtc.rs  webrtc_handler.rs  websocket.rs  websocket_handler.rs
src/middleware/: cache.rs  limiter.rs  mod.rs  panic_handler.rs
src/muplis/: service.rs
src/notifications/: service.rs
src/users/: controller.rs  dto.rs  mod.rs  service.rs
src/utils/: canonical.rs  embeddings.rs  kitten_tts.rs  kitten_tts_singleton.rs  kitten_tts_symbols.txt  lojban_ipa.rs  mod.rs  openrouter_models.rs  tersmu.rs
src/versions/: controller.rs  service.rs
src/waves/: controller.rs  dto.rs  mod.rs  service.rs
src/wiki/: controller.rs  dto.rs  importer.rs  markdown.rs  mod.rs  models.rs  service.rs
(+145 files in other folders)
