[package]
name = "lensisku"
version = "0.2.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'abort'
incremental = true
codegen-units = 16
rpath = false

[profile.release]
opt-level = 3           # Maximum optimizations
lto = "fat"            # Enable link-time optimization across all crates
codegen-units = 1      # Further optimize at the cost of compile time
# Unwind required for CatchPanicWithMessage middleware to return panic message in HTTP 500
panic = "unwind"
strip = true          # Strip symbols from binary
overflow-checks = false # Disable integer overflow checks
debug = false         # No debug symbols
debug-assertions = false # Disable debug assertions
incremental = false   # Disable incremental compilation
rpath = false        # Disable runtime path

# Enable a small amount of optimization in debug mode
[profile.dev.package."*"]
opt-level = 1

# Profile for benchmark builds
[profile.bench]
inherits = "release"
lto = true
codegen-units = 1

# Faster release build for Docker/CI (less LTO and more codegen units)
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
incremental = true

[[bin]]
name = "lensisku"
path = "src/main.rs"
[[bin]]
name = "test"
path = "test/test.rs"

[dependencies]
# Default features include `compress-zstd`, which pulls `zstd` 0.13 while `wasmtime-cache` uses 0.11.
# Omit `compress-zstd` so we only compile one `zstd` (via Wasmtime). Brotli + gzip compression stay enabled.
actix-web = { version = "4.13", default-features = false, features = [
	"macros",
	"compress-brotli",
	"compress-gzip",
	"cookies",
	"http2",
	"unicode",
	"compat",
	"ws",
	"rustls",
] }
tokio-postgres = { version = "0.7.17", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
deadpool = "0.12.2"
deadpool-postgres = "0.14.1"
postgres-types = { version = "0.2.13", features = ["derive"] }
pgvector = { version = "0.4.1", features = ["postgres"] }
chrono = { version = "0.4.44", features = ["serde"] }
refinery = { git = "https://github.com/rust-db/refinery.git", rev = "3fa178fc2da8d29a897886b95d05435302811f6c", features = [
	"tokio-postgres",
] }
dotenvy = "0.15.7"
env_logger = "0.11.10"
log = "0.4.29"
utoipa = { version = "5.4", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
num_cpus = "1.17"
futures = "0.3.32"
tokio = { version = "1.50", features = ["full", "time", "sync"] }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
# Transitive (`jsonwebtoken` → `rsa`). 0.8.4 trips rustc future-incompat (private `vec!`, rust#120192); keep ≥0.8.6.
num-bigint-dig = "0.8.6"
bcrypt = "0.19"
actix-web-httpauth = "0.8.2"
oauth2 = "5.0"
# Keep in sync with `oauth2` (currently reqwest 0.12) so `request_async` uses one `reqwest::Client` type.
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
mailparse = "0.16.1"
base64 = "0.22.1"
walkdir = "2.5.0"
md5 = "0.8"
actix-cors = "0.7.1"
encoding_rs = "0.8.35"
lettre = { version = "0.11.20", features = ["smtp-transport", "tokio1-native-tls"] }
rand = "0.9"
uuid = { version = "1.23", features = ["v4", "serde"] }
tectonic = { version = "0.15.0", features = ["external-harfbuzz"] }
regex = "1.12"
ammonia = "4.1.2"
utoipauto = "0.2.0"
tempfile = "3.27"
xml = "0.8.20"
lazy_static = "1.5.0"
once_cell = "1.21.4"
actix-limitation = "0.5.1"
redis = { version = "0.30", features = ["tokio-comp"] }
unicode-segmentation = "1.13"
bytes = "1.11"
actix-web-grants = "4.1.2"
fsrs = "5.2"
image = { version = "0.25.10", features = ["jpeg", "png"] }
webp = "0.3.1"
async-trait = "0.1.89"
validator = { version = "0.20.0", features = ["derive"] }
crc32fast = "1.5"

camxes-rs = "0.1.5"
openssl = "0.10.76"
csv = "1.4"
vlazba = "0.7.14"
parking_lot = "0.12.5"
tokio-stream = "0.1.18"
actix-web-lab = "0.26"
# Default features enable `zstd` 0.13; we only write Deflate (`export` TSV zips). Match `ndarray-npy` (`zip/deflate`).
zip = { version = "6.0", default-features = false, features = ["deflate"] }
wasmtime = "17.0.0"
wasmtime-wasi = "17.0.0"
anyhow = "1.0"
fastembed = { version = "5.13", default-features = false, features = ["hf-hub", "ort-download-binaries"] }
# Same `ort` as fastembed: default-features = false (no CUDA/TensorRT/etc. Cargo features). Prebuilt ORT is CPU-only.
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["download-binaries", "ndarray"] }
ndarray = "0.17"
ndarray-npy = "0.10"
ogg-opus = "0.1.2"
[dev-dependencies]
criterion = "0.8"

[lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
